--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="./images/life.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
                     <div class="align-items-center">
-                    <p class="cardtestimonies__text">Hola Lorena! Ya vamos a buscar a Life. Queriamos daros las gracias por estos días de tranquilidad, el hecho de que haya estado con vosotros nos ha dejado descansar y desconectar la cabeza por completo. Ya vemos en los videos que Tuna está super mimada con vosotros!</p>
+                    <p class="cardtestimonies__text">"Hola Lorena! Ya vamos a buscar a Life. Queriamos daros las gracias por estos días de tranquilidad, el hecho de que haya estado con vosotros nos ha dejado descansar y desconectar la cabeza por completo. Ya vemos en los videos que Tuna está super mimada con vosotros!"</p>
                     </div>
                 </div>
                 <div class="cardTestimonies">
@@ -72,7 +72,7 @@
                     <img src="./images/heda.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
                     <div class="align-items-center">
-                    <p class="cardtestimonies__text">Muy buen trato y conocimiento de los chicos con las mascotas! Quedé encantada con ellos</p>
+                    <p class="cardtestimonies__text">"Muy buen trato y conocimiento de los chicos con las mascotas! Quedé encantada con ellos"</p>
                     </div>
                 </div>
                 <div class="cardTestimonies">
@@ -80,7 +80,7 @@
                     <img src="./images/candy.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
                     <div class="aling-items-center">
-                    <p class="cardtestimonies__text">Muchas gracias por haber cuidado de Candy. La hemos echado mucho de menos estos dias... a ella parece que no le ha importado mucho jeje. Se nota que lo ha pasado super bien con vosotros. Y muchas gracias por las fotos y los videos, se la ve super contenta.</p>
+                    <p class="cardtestimonies__text">"Muchas gracias por haber cuidado de Candy. La hemos echado mucho de menos estos dias... a ella parece que no le ha importado mucho jeje. Se nota que lo ha pasado super bien con vosotros. Y muchas gracias por las fotos y los videos, se la ve super contenta."</p>
                     </div>
                 </div>
                 <div class="cardTestimonies">
@@ -88,7 +88,7 @@
                     <img src="./images/carmela.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
                     <div class="align-items-center">
-                    <p class="cardtestimonies__text">Deje a mi gatita Carmela con los chicos y me sorprendió lo rápido que se adaptó a estar con ellos! No estaba acostumbrada a otras personas y menos a otro hogar, pero gracias a la paciencia de los chicos pudo estar super bien acompañada en los días de nuestro viaje. Super recomendable!</p>
+                    <p class="cardtestimonies__text">"Deje a mi gatita Carmela con los chicos y me sorprendió lo rápido que se adaptó a estar con ellos! No estaba acostumbrada a otras personas y menos a otro hogar, pero gracias a la paciencia de los chicos pudo estar super bien acompañada en los días de nuestro viaje. Super recomendable!"</p>
                     </div>
                 </div>
                 <div class="cardTestimonies">
@@ -96,7 +96,7 @@
                     <img src="./images/felipe.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
                     <div class="align-items-center">
-                    <p class="cardtestimonies__text">Pusimos en práctica todo lo aprendido con los chicos y la conducta de Felipe mejoró muchísimo!</p>
+                    <p class="cardtestimonies__text">"Pusimos en práctica todo lo aprendido con los chicos y la conducta de Felipe mejoró muchísimo!"</p>
                     </div>
                 </div>
                 <div class="cardTestimonies">
@@ -104,14 +104,14 @@
                     <img src="./images/lluna.PNG" class="testimonies__image" alt="">
                     <img src="./images/stars.png" clas="testimonies__stars" alt="">
                     <div class="align-items-center">
-                    <p class="cardtestimonies__text">"Teníamos problemas cuando salíamos a pasear con Lluna y gracias a las sesiones de educación canina con Lorena ahora nuestros paseos son mucho más tranquilos  y tanto Lluna como nosotros desfrutamos sin angustia esos paseos.</p>
+                    <p class="cardtestimonies__text">"Teníamos problemas cuando salíamos a pasear con Lluna y gracias a las sesiones de educación canina con Lorena ahora nuestros paseos son mucho más tranquilos  y tanto Lluna como nosotros desfrutamos sin angustia esos paseos."</p>
                     </div>
                 </div>
             </Section>
         </section>
         <section class="waveup"></section>
         <section class="knowAboutUsButton">
-            <button><a href="./pages/about-us.html">Conocenos mejor</a></button>
+            <button class="button_primary"><a href="./pages/about-us.html">Conocenos mejor</a></button>
         </section>
         <section class="wavedown"></section>
     </Main>
