--- a/pages/dog-training.html
+++ b/pages/dog-training.html
@@ -38,11 +38,11 @@
             <img src="../images/wave-svg-up.svg" alt="">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 col-md-6 animate__animated animate__fadeInRight align-items-center   ">
+                    <div class="col-12 col-md-6 align-items-center">
                         <div class="dogtrainigTitulediv">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 animate__animated animate__fadeInLeft align-items-center">
+                    <div class="col-12 col-md-6 align-items-center">
                         <div class="dogtrainigTitulediv">
                             <h1 class="dogtrainigBanner__titule">Adiestramiento Online</h1>
                             <h2 class="dogtrainigBanner__subtitule">Quieres vivir y convivir con tu compañero peludo en armonía, en un ambiente relajado y con óptimo bienestar. Sabías que la mayoría de los problemas de conducta es porque no sabemos reconocer y por lo tanto cubrir todas las necesidades de nuestro compi?</h2>
@@ -163,7 +163,7 @@
         </section>
         <div class="waveup"></div>
         <section id="dogtrainingVermas">
-            <button><a href="https://wa.me/+34623021485">  Escribinos un Whatsapp</a></button>
+            <button class="button_primary"><a href="https://wa.me/+34623021485">  Escribinos un Whatsapp</a></button>
         </section>
         <div class="wavedown"></div>
     </Main>
