--- a/pages/pet-sitter.html
+++ b/pages/pet-sitter.html
@@ -135,7 +135,7 @@
                         </div>
                         <div class="row">
                             <div class="formButton">
-                                <button>Consultar disponibilidad</button>
+                                <button class="button_primary">Consultar disponibilidad</button>
                             </div>
                         </div>
 
