--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -79,7 +79,7 @@
                         <div class="col-12 col-md-6 align-items-center">
                             <div class="row">
                                 <div class="formButton">
-                                <button>Enviar Información</button>
+                                <button class="button_primary">Enviar Información</button>
                             </div>
                         </div>
                     </div>
