--- a/pages/dog-training.html
+++ b/pages/dog-training.html
@@ -65,12 +65,12 @@
                 <div class="row">
                     <div class="col-12 col-md-6 animate__animated animate__fadeInLeft align-items-center">
                         <div class="align-items-center">
-                            <img class="giff" src="../images/giff/Sabes a que edad es más recomendable separar a los cachorros de su mama.gif" alt="">
+                            <img class="giff" src="../images/giff/giff2.gif" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 animate__animated animate__fadeInRight align-items-center   ">
                         <div class="align-items-center">
-                            <img class="giff" src="../images/giff/Light Green and Blue Beach Dog Animated Social Media Graphic.gif" alt="">
+                            <img class="giff" src="../images/giff/giff1.gif" alt="">
                         </div>
                     </div>
                 </div>    
@@ -115,7 +115,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-4 align-items-center">
-                <img class="giff" src="../images/giff/Sabes cuál es la diferencia entre.gif" alt="">
+                <img class="giff" src="../images/giff/giff3.gif" alt="">
               </div>
               <div class="col-12 col-md-4 align-items-center">
                 <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
